# fs

./: .gitignore  README.md  package.json  screamingvoid__fs.podspec
android/: CMakeLists.txt  build.gradle
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/me/screamingvoid/fs/: FSModule.java
cpp/: FSHostObject.cpp  FSHostObject.h
ios/: FSModule.mm
ios/FS.xcodeproj/: project.pbxproj
ios/FS.xcodeproj/xcshareddata/xcschemes/: FS.xcscheme
scripts/: booststrap-android.js
src/: FS.ts  index.ts
types/: FS.d.ts
